<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/History">
        <SeekBarPreference
                android:title="@string/history_rows"
                android:key="history_rows"
                android:defaultValue="4"
                android:max="5"
                app:showSeekBarValue="true"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Favorites">
        <org.alex.kitsune.commons.MultiSelectListPreference
                android:title="@string/categories"
                android:key="categories"
        />
        <SeekBarPreference
                android:title="@string/favorites_rows"
                android:key="favorites_rows"
                android:defaultValue="4"
                android:max="5"
                app:showSeekBarValue="true"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Saved">
        <SeekBarPreference
                android:title="@string/saved_rows"
                android:key="saved_rows"
                android:defaultValue="4"
                android:max="5"
                app:showSeekBarValue="true"
        />
    </PreferenceCategory>
</PreferenceScreen>