<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_sort_descending"
          android:title="@string/sorting"
          app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/latest"
                      android:title="@string/Latest"
                      android:checked="true"/>
                <item android:id="@+id/alphabetical"
                      android:title="@string/Alphabetical"/>
                <item android:id="@+id/alphabetical_alt"
                      android:title="@string/Alphabetical_Alt"/>
                <item android:id="@+id/images_size"
                      android:title="@string/size"/>
            </group>
        </menu>
    </item>
</menu>