<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_vertical">
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                  android:gravity="center_vertical"
                  android:layout_width="0.0dip"
                  android:layout_height="match_parent"
                  android:text="@string/filter"
                  android:layout_weight="1.0"
                  android:paddingStart="8dp"
                  android:paddingEnd="8dp"
        />
        <Button android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
        <Button android:id="@+id/apply"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:layout_marginEnd="8dp"
                style="@style/Widget.MaterialComponents.Button"
        />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
</LinearLayout>