<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/input_layout"
                  android:orientation="vertical"
                  android:theme="@style/Theme.MaterialComponents">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_name_layout"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_copy"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_name"
                    android:hint="Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_name_alt_layout"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_copy"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_name_alt"
                    android:hint="Name (Alternative)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Button android:id="@+id/close"
            android:text="@string/CLOSE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout"
            android:layout_alignStart="@id/input_layout"
    />
    <Button android:id="@+id/save"
            android:text="@string/SAVE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout"
            android:layout_alignEnd="@+id/input_layout"
    />
    <Button android:id="@+id/discard"
            android:text="@string/DISCARD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout"
            android:layout_toEndOf="@+id/close"
            android:layout_toStartOf="@+id/save"/>
</RelativeLayout>